--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
 
+<html>
+  <head>
+    <title>JavaScript Minifier</title>
+    <!-- Add Favicon -->
+    <script>
+      // https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Editable_content
+      // https://www.google.com/search?q=html+editable+paragraph
+      // https://careerkarma.com/blog/javascript-string-contains/
+      // https://www.google.com/search?q=javascript+look+for+specific+string
+      // https://jscompress.com/
+      // https://www.minifier.org/
+    </script>
+    <style>
+      * {
+        background-color: #FFFFFF;
+      }
+      
+      .a {
+        background-color: #F0F0F2;
+        font-family: "Lucida Console", "Courier New", monospace;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="a" contenteditable="true">
+      // JavaScript here...
+    </div>
+  </body>
+</html>
